# git-worktree-cleanup

./: .pre-commit-config.yaml  LICENSE  README.md  cleanup.py  pyproject.toml
src/git_worktree_cleanup/: __main__.py  cleanup.py
