[project]
name = "git-worktree-cleanup"
version = "0.1.1"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "gitpython>=3.1.46",
    "prompt-toolkit>=3.0.52",
]

[dependency-groups]
dev = [
    "pre-commit>=4.5.1",
    "ruff>=0.15.7",
]

[project.scripts]
cleanup-worktree = "git_worktree_cleanup.cleanup:cleanup"

[build-system]
requires = ["uv_build>=0.11.2,<0.12"]
build-backend = "uv_build"